RESOLVED FIXED188429
Prevent collectScreenProperties from crashing Base System
https://bugs.webkit.org/show_bug.cgi?id=188429
Summary Prevent collectScreenProperties from crashing Base System
Justin Fan
Reported 2018-08-08 19:21:38 PDT
Prevent collectScreenProperties from crashing Base System
Attachments
Patch (2.51 KB, patch)
2018-08-08 19:50 PDT, Justin Fan
no flags
Patch (2.52 KB, patch)
2018-08-08 20:06 PDT, Justin Fan
no flags
Radar WebKit Bug Importer
Comment 1 2018-08-08 19:25:48 PDT
Justin Fan
Comment 2 2018-08-08 19:50:39 PDT
Simon Fraser (smfr)
Comment 3 2018-08-08 19:57:21 PDT
Comment on attachment 346812 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=346812&action=review > Source/WebCore/ChangeLog:9 > + Reviewed by NOBODY (OOPS!). This should go above the description (use "webkit-patch upload" to prepare your patches). > Source/WebCore/platform/mac/PlatformScreenMac.mm:203 > + CGLRendererInfoObj rendererInfo = 0; nullptr, not 0 > Source/WebCore/platform/mac/PlatformScreenMac.mm:205 > ASSERT(error == kCGLNoError); We know this assert will fire on some systems, so remove it.
Justin Fan
Comment 4 2018-08-08 20:06:52 PDT
Justin Fan
Comment 5 2018-08-08 20:09:52 PDT
Thanks for the rapid review Simon!
WebKit Commit Bot
Comment 6 2018-08-08 20:53:25 PDT
Comment on attachment 346814 [details] Patch Clearing flags on attachment: 346814 Committed r234717: <https://trac.webkit.org/changeset/234717>
WebKit Commit Bot
Comment 7 2018-08-08 20:53:26 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.