Prevent collectScreenProperties from crashing Base System https://bugs.webkit.org/show_bug.cgi?id=188429 <rdar://problem/43075662>

Patch by Justin Fan <justin_fan@apple.com> on 2018-08-08
Reviewed by Simon Fraser.

Adding some error-checking and early returns to further prevent calling CGLDescribeRenderer with invalid parameters.

Existing WebGL tests should cover; no expected change in behavior. Crash happened primarily on Base System.

* platform/mac/PlatformScreenMac.mm:
(WebCore::gpuIDForDisplayMask):

Canonical link: https://commits.webkit.org/203532@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@234717 268f45cc-cd09-0410-ab3c-d52691b4dbfc